# Auto-Validate-By-History-Clone

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
benchmark/: benchmark_avh.py  benchmark_data_generation.py  benchmark_lof.py  benchmark_tfdv.py  benchmark_tfdv_full.py  benchmark_visualisations.ipynb  temp.ipynb
benchmark/healthESN/: model.py
notebooks/: benchmark_data_generation.ipynb
src/avh/: __init__.py  aliases.py  auto_validate_by_history.py  constraints.py  metrics.py  utility_functions.py
src/avh/constraints/: __init__.py  _base.py  _constraints.py  _data_quality_program.py
src/avh/data_generation/: __init__.py  _base.py  _categorical.py  _numeric.py  _pipeline.py
src/avh/data_issues/: __init__.py  _base.py  _categorical.py  _dataset.py  _issues.py  _numeric.py
src/avh/metrics/: __init__.py  _base.py  _categorical.py  _metrics.py  _numeric.py
src/notebooks/: benchmark_data_generation.ipynb
