[tool.poetry]
name = "auto-validate-by-history-clone"
version = "0.1.0"
description = ""
authors = ["miautawn <miautawn@gmail.com>"]
packages = [
  {include = "avh", from = "src"},
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.0"
pyarrow = "^16.0.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
tqdm = "^4.66.2"
statsmodels = "^0.14.1"
gutenbergpy = "^0.3.5"
joblib = "^1.4.0"

[tool.poetry.group.dev.dependencies]
jupyter-black = "^0.3.4"
notebook = "^7.1.0"
pre-commit = "^3.7.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
